# maplab_rovio

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cfg/: rovio.info
cmake/: DetectSIMD.cmake  OptimizeForArchitecture.cmake
include/rovio/: Camera.hpp  CameraCalibration.hpp  FeatureCoordinates.hpp  FeatureManager.hpp  FeatureStatistics.hpp  FilterConfiguration.hpp  FilterStates.hpp  ImagePyramid.hpp  ImgUpdate.hpp  ImuPrediction.hpp  LocalizationLandmarkUpdate.hpp  Memory.hpp  MultiCamera.hpp  MultilevelPatch.hpp  MultilevelPatchAlignment.hpp  Patch.hpp  PoseUpdate.hpp  RobocentricFeatureElement.hpp  RovioFilter.hpp  RovioInterface.h  RovioInterface.hpp  RovioInterfaceBuilder.hpp  RovioInterfaceImpl.hpp  RovioInterfaceImplInl.hpp  RovioInterfaceInl.h  RovioInterfaceInl.hpp  RovioInterfaceStates.h  RovioInterfaceStates.hpp  RovioInterfaceStatesImpl.hpp  RovioNode.hpp  RovioRosNode.hpp  VelocityUpdate.hpp  ZeroVelocityUpdate.hpp  featureTracker.hpp  rovio-interface-inl.h  rovio-interface-state.h  rovio-interface.h
include/rovio/CoordinateTransform/: FeatureOutput.hpp
launch/: rovio_node.launch
src/: Camera.cpp  CameraCalibration.cpp  FeatureCoordinates.cpp  RovioInterfaces.cpp  RovioNode.cpp  Scene.cpp  rovio-interface.cc  rovio_node.cpp  rovio_rosbag_loader.cpp  test_localization_landmark_update.cpp  test_mlp.cpp  test_patch.cpp
