<?xml version="1.0"?>
<package format="2">
  <name>rovio</name>
  <version>0.0.0</version>
  <description>

	rovio

  </description>
  <url></url>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>glog_catkin</depend>
  <depend>kindr</depend>
  <depend>lightweight_filtering</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>opencv3_catkin</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>yaml_cpp_catkin</depend>
</package>
